--- a/YandS.DAL/YandS.DAL.csproj
+++ b/YandS.DAL/YandS.DAL.csproj
@@ -37,7 +37,7 @@
       <HintPath>..\Resources\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
     <Reference Include="EPPlus">
-      <HintPath>..\..\Resources\EPPlus.dll</HintPath>
+      <HintPath>..\..\..\Resources\EPPlus.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -52,7 +52,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TemplateEngine.Docx">
-      <HintPath>..\..\Resources\TemplateEngine.Docx.dll</HintPath>
+      <HintPath>..\YandS.UI\lib\TemplateEngine.Docx.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
