--- a/YandS.UI/YandS.UI.csproj
+++ b/YandS.UI/YandS.UI.csproj
@@ -185,7 +185,7 @@
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Twilio.Api">
-      <HintPath>..\..\Resources\Twilio.Api.dll</HintPath>
+      <HintPath>..\..\..\Resources\Twilio.Api.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
