--- a/YandS.DAL/YandS.DAL.csproj
+++ b/YandS.DAL/YandS.DAL.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\..\lib\YandS.DAL\bin\Debug\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
     <Reference Include="EPPlus">
-      <HintPath>..\..\lib\YandS.DAL\bin\Debug\EPPlus.dll</HintPath>
+      <HintPath>..\..\..\Resources\EPPlus.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -51,7 +51,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TemplateEngine.Docx">
-      <HintPath>..\..\lib\YandS.DAL\bin\Debug\TemplateEngine.Docx.dll</HintPath>
+      <HintPath>..\..\..\Resources\TemplateEngine.Docx.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
